<resources>
    <string name="app_name">Elegance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Elegance Application</string>
    <string name="nav_header_subtitle">tailorele@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="customer_register">Register Customer</string>
    <string name="customer_map_no">Customer Serial No  </string>
    <string name="customer_name">Customer Name</string>
    <string name="contact_no">Contact No </string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="save_customer"> Save Customer </string>
    <string name="measurements">Measurements</string>
    <string name="customer_search">Customer Search</string>
    <string name="search_hint">Customer Name,MapNo,Contact</string>
    <string name="phone">Phone :</string>
    <string name="customer_measurement">Customer Measurement</string>
    <string name="customer_description">Customer Description</string>
    <string name="boski">Boski :</string>
    <string name="cloth_quantity">Qty</string>
    <string name="suit_type">Suit Type :</string>
    <string name="cotton">Cotton :</string>
    <string name="khaadi">Khaadi :</string>
    <string name="karandi">Karandi :</string>
    <string name="lilan">Lilan :</string>
    <string name="washing_wear">W/Wear :</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="counter">Counter</string>
    <string name="add_cloth_order">Add Cloth Order</string>
    <string name="place_order">Place Order</string>
    <string name="total_calculations">Total Calculations</string>
    <string name="discount">Discount</string>
    <string name="advance_payment">Advance Payment</string>
    <string name="balance">Balance</string>
    <string name="delete_order">Delete Order</string>
    <string name="remaining_balance">Remaining Balance</string>
    <string name="total_amount">Total Bill</string>
    <string name="both_sides">Both Sides</string>
    <string name="front_pocket">front Pocket</string>
    <string name="simple">Simple</string>
    <string name="sherwani">Sherwani</string>
    <string name="half_sherwani">half-Sherwani</string>
    <string name="expected_date">Expected Date</string>
    <string name="calculate_bill">Calculate Bill</string>
    <string name="search_order">Search Order</string>
    <string name="customer_id">Customer ID</string>
    <string name="suit_status">Suit Status</string>
    <string name="order_date">Order Date</string>
    <string name="order_key">Order Key :</string>
    <string name="order_bill_key">Order Bill key :</string>
    <string name="deliver_orders">Deliver Orders  </string>


</resources>
