<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.CartActivity">

     <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

         <include
             android:id="@+id/app_bar_cart_activity"
             layout="@layout/app_bar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />


   <androidx.cardview.widget.CardView
       android:id="@+id/cardTopView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:cardCornerRadius="5dp"
       android:layout_margin="2dp"
       android:layout_below="@+id/app_bar_cart_activity">

       <LinearLayout
           android:id="@+id/linearLayoutCart"
           android:layout_width="match_parent"
           android:layout_height="95dp"
           android:layout_margin="5dp"
           android:orientation="horizontal">

           <com.mikhaellopez.circularimageview.CircularImageView
               android:id="@+id/circularImage"
               android:layout_width="80dp"
               android:layout_height="80dp"
               android:layout_marginStart="9dp"
               android:layout_marginTop="9dp"
               android:src="@drawable/boss"
               app:civ_border_width="1dp"
               app:civ_shadow="true"
               app:civ_shadow_color="#8BC34A"
               app:civ_shadow_radius="0" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginStart="9dp"
               android:layout_marginTop="2dp"
               android:layout_marginEnd="9dp"
               android:orientation="vertical">


               <TextView
                   android:id="@+id/cartCustomerSerialNo"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:singleLine="true"
                   android:text="@string/customer_map_no"
                   android:textColor="@android:color/black"
                   android:textSize="19sp" />

               <TextView
                   android:id="@+id/cartCustomerName"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="7dp"
                   android:singleLine="true"
                   android:text="@string/customer_name"
                   android:textColor="@android:color/black"
                   android:textSize="19sp" />


               <TextView
                   android:id="@+id/cartCustomerContact"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="7dp"
                   android:singleLine="true"
                   android:text="@string/contact_no"
                   android:textColor="@android:color/black"
                   android:textSize="19sp" />


           </LinearLayout>

       </LinearLayout>

   </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardTopView"
        android:layout_margin="5dp"
        android:background="#c5c5c5"
        />

    <LinearLayout
        android:id="@+id/paymentLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cartListRecyclerView"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/totalCalculationsEditText"
            android:hint="@string/total_calculations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <EditText
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/totalCalculationsSumEditText"
            android:hint="@string/total_amount"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorRed"
                android:textStyle="bold"
                android:enabled="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/discountEditText"
            android:hint="@string/discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorRed"
                android:enabled="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/advancePayment"
            android:hint="@string/advance_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorRed"
                android:enabled="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/balancePayment"
            android:hint="@string/balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/colorRed"
                android:textStyle="bold"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/remainingBalance"
            android:hint="@string/remaining_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorRed"
                android:enabled="false"
                />

        </com.google.android.material.textfield.TextInputLayout>



       <EditText
           android:id="@+id/expectedDate"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="text"
           android:hint="@string/expected_date"/>



        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_weight="1"
                android:id="@+id/getBillsBtn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/calculate_bill"
                android:textStyle="bold"
                android:background="@drawable/round_button"
                android:layout_margin="10dp"/>

            <Button
                android:onClick="print"
                android:layout_weight="1"
                android:id="@+id/printReciept"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
            android:text="print Reciept"
            android:textStyle="bold"
            android:background="@drawable/round_button"/>


        </LinearLayout>


    </LinearLayout>




</RelativeLayout>

</androidx.core.widget.NestedScrollView>