<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activites.ViewCustomerOrdersActivity">





<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar_viewOrder"
        layout="@layout/app_bar_layout"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        >

        <Switch
            android:id="@+id/deliverOrdersSwitchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/deliver_orders"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <TextView
                android:id="@+id/customer_id"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/customer_id"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textSize="19sp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/customer_name_viewOrder"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/customer_name"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textSize="19sp"
                android:textAlignment="center"
                android:layout_below="@id/customer_id"
                android:textColor="@android:color/black"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/customer_contact_viewOrder"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/customer_name"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:textSize="19sp"
                android:textAlignment="center"
                android:layout_below="@id/customer_name_viewOrder"
                android:textColor="@android:color/black"
                />


            <Spinner
                android:id="@+id/orderKeysSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_contact_viewOrder"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="70dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>



    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/orderSerialKeyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:text="@string/order_key"
        android:textColor="@color/colorRed"
        android:textSize="19sp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_ViewOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/orderBillSerialKeyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/order_bill_key"
        android:textColor="@color/colorRed"
        android:textSize="19sp"
        android:textStyle="bold"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_OrdersBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        />



</LinearLayout>

</androidx.core.widget.NestedScrollView>